[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.039, 0.039, 0.059, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
alignment = 1

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Ø°Ù‡Ø¨ Ø£ØµÙØ± Ø£Ùˆ Ø¯Ù… Ø£Ø­Ù…Ø±"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Ø§Ù‚ØªÙ„ Ø§Ø¨Ùˆ Ø­Ù„Ø²Ù‡ ÙÙŠ 10 Ø¯Ù‚Ø§Ø¦Ù‚!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CharacterSelect" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="PrevBtn" type="Button" parent="VBox/CharacterSelect"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "â†’"

[node name="CharInfo" type="VBoxContainer" parent="VBox/CharacterSelect"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2

[node name="CharPreview" type="TextureRect" parent="VBox/CharacterSelect/CharInfo"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4

[node name="CharName" type="Label" parent="VBox/CharacterSelect/CharInfo"]
layout_mode = 2
text = "Ø£Ø¨Ùˆ Ø³Ù„ÙŠÙ…Ø§Ù†"
horizontal_alignment = 1

[node name="CharTitle" type="Label" parent="VBox/CharacterSelect/CharInfo"]
layout_mode = 2
text = "Ø§Ù„ØªØ§Ø¬Ø± Ø§Ù„Ø«Ø±ÙŠ"
horizontal_alignment = 1

[node name="CharDesc" type="Label" parent="VBox/CharacterSelect/CharInfo"]
layout_mode = 2
text = "ØªØ§Ø¬Ø± Ø«Ø±ÙŠ ÙŠØ­Ø¨ Ø§Ù„Ø°Ù‡Ø¨"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CharStats" type="VBoxContainer" parent="VBox/CharacterSelect/CharInfo"]
layout_mode = 2

[node name="NextBtn" type="Button" parent="VBox/CharacterSelect"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "â†"

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CitySelect" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="Spacer3" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="StartBtn" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Ø§Ø¨Ø¯Ø£ Ø§Ù„Ù„Ø¹Ø¨"

[node name="LeaderboardBtn" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "ğŸ† Ù‚Ø§Ø¦Ù…Ø© Ø§Ù„Ø£Ø¨Ø·Ø§Ù„"

[node name="HighScore" type="Label" parent="VBox/Buttons"]
layout_mode = 2
text = "Ø£Ø¹Ù„Ù‰ Ù†ØªÙŠØ¬Ø©: 0 Ù‚ØªÙŠÙ„"
horizontal_alignment = 1
